[workspace]
members = [
  "bable",
  "core",
  "kvstructs",
  "options",
  "skl",
  "traits",
  "utils",
  "vpb",
  "wisc",
  "zallocator",
  "zuffer"
]

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
