[workspace]
members = [
  "bable",
  "core",
  "kvstructs",
  "options",
  "skl",
  "traits",
  "utils",
  "vpb",
  "wisc",
  "zallocator",
  "zuffer"
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Al Liu <scygliu1@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/al8n/veladb"
rust-version = "1.66"

[workspace.dependencies]
# internal dependencies
bable = { path = "bable", default-features = false }
kvstructs = { path = "kvstructs", default-features = false }
skl = { path = "skl", default-features = false }
vela-utils = { path = "utils", default-features = false }
vpb = { path = "vpb", default-features = false }
vela-core = { path = "core", default-features = false }
vela-options = { path = "options", default-features = false }
vela-traits = { path = "traits", default-features = false }
wisc = { path = "wisc", default-features = false }
zallocator = { path = "zallocator", default-features = false }
zuffer = { path = "zuffer", default-features = false }

# external dependencies
aes = "0.8"
arc-swap = "1.6"
atomic = { version = "0.5",  default-features = false }
async-channel = "1.8"
async-io = "1.12"
bitflags = "1.3"
bytes = { version = "1.2", default-features = false }
crc32fast = { version = "1.3", default-features = false }
crossbeam-channel = "0.5"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8", default-features = false }
crabmole = { version = "0.1", default-features = false }
ctr = "0.9"
enum_dispatch = "0.3"
futures = { version = "0.3", default-features = false }
fmmap = { version = "0.3", default-features = false, features = ["sync"] }
getrandom = { version = "0.2", default-features = false }
hashbrown = { version = "0.13", default-features = false }
lru = { version = "0.9", default-features = false }
lz4_flex = { version = "0.9", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
num_cpus = "1.13"
parking_lot = "0.12"
pollster = "0.2"
prost = { version = "0.11", default-features = false }
rand = { version = "0.8", default-features = false }
spin = "0.9"
scopeguard = "1.1"
stretto = { version = "0.7", default-features = false }
rustix = { version = "0.36", default-features = false }
tracing = { version = "0.1", default-features = false }
triomphe = { version = "0.1", default-features = false }
thiserror = "1"
wg = { version = "0.3", default-features = false }
seahash = "4.1"
serde = { version = "1", default-features = false, features = ["derive"] }
snap = "1"
xxhash-rust = { version = "0.8", default-features = false }
zstd_compression = { package = "zstd", version = "0.12.1+zstd.1.5.2" }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
