[package]
name = "bable"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "(WIP) badger's ssttable implementation"

[features]
default = ["std"]
full = ["std", "tracing/default"]
std = ["stretto/sync", "zallocator/std", "zallocator/threadpool", "vpb/std", "vpb/sea-std", "vpb/xxhash64-std", "crossbeam-channel", "crossbeam-utils", "tracing/std", "triomphe/std", "num_cpus", "scopeguard", "fmmap", "parking_lot", "rand/std"]
singlethread = ["zallocator/core", "hashbrown"]

metrics = ["mapcell", "lazy_static/spin_no_std"]
metrics-std = ["mapcell/std", "lazy_static"]
nightly = ["zallocator/nightly", "lru/nightly"]

js = ["getrandom/js"]

# if you make sure use single thread with no_std
rc = []

# enable aes encryption
aes = ["vpb/aes"]
aes-std = ["vpb/aes-std"]

inline-more = ["hashbrown/inline-more"]

[[bench]]
name = "table"
harness = false

[dependencies]
bytemuck = { version = "1.2", features = ["aarch64_simd", "wasm_simd"] }
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8", optional = true }
fmmap = { version = "0.3", optional = true }
getrandom = { version = "0.2", optional = true, default-features = false }
hashbrown = { version = "0.12", default-features = false, optional = true }
lazy_static = { version = "1.4", optional = true, default-features = false }
lru = { version = "0.7", default-features = false }
mapcell = { path = "../mapcell", optional = true, default-features = false }
num_cpus = { version = "1.13", optional = true }
parking_lot = { version = "0.12", optional = true }
rand = { version = "0.8", default-features = false }
scopeguard = { version = "1.1", optional = true }
stretto = { version = "0.7", optional = true, default-features = false }
tracing = { version = "0.1", optional = true, default-features = false }
triomphe = { version = "0.1", default-features = false }
vpb = { path = "../vpb", default-features = false, features = ["sea", "xxhash64"] }
zallocator = { path = "../zallocator", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
criterion = "0.3"
vpb = { path = "../vpb", features = ["full"] }
