[package]
name = "bable"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "Badger's high performance sst table implementation"
repository = "https://github.com/al8n/veladb/tree/main/bable"
readme = "README.md"
keywords = ["sstable", "ssttable", "badger", "database", "sst"]
categories = ["database-implementations", "data-structures", "no-std"]

[features]
default = ["std"]
full = ["std", "tracing/default"]
std = ["stretto/sync", "zallocator/std", "zallocator/threadpool", "vpb/std", "vpb/sea-std", "vpb/xxhash64-std", "crossbeam-channel", "crossbeam-utils", "tracing/std", "num_cpus", "scopeguard/use_std", "fmmap", "parking_lot", "rand/std", "vela-utils/std", "vela-utils/ref_counter_std"]
singlethread = ["zallocator/core", "hashbrown", "vela-utils/singlethread", "scopeguard"]

metrics = ["vela-utils/map_cell", "lazy_static/spin_no_std"]
metrics-std = ["vela-utils/map_cell_std", "lazy_static"]
nightly = ["zallocator/nightly", "lru/nightly"]

js = ["getrandom/js"]

# enable aes encryption
aes = ["vpb/aes"]
aes-std = ["vpb/aes-std"]

inline-more = ["hashbrown/inline-more"]

[[bench]]
name = "table"
harness = false

[dependencies]
bitflags = "1.3"
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8", optional = true }
fmmap = { version = "0.3", optional = true }
getrandom = { version = "0.2", optional = true, default-features = false }
hashbrown = { version = "0.12", default-features = false, optional = true }
lazy_static = { version = "1.4", optional = true, default-features = false }
lru = { version = "0.7", default-features = false }
num_cpus = { version = "1.13", optional = true }
parking_lot = { version = "0.12", optional = true }
rand = { version = "0.8", default-features = false }
scopeguard = { version = "1.1", optional = true }
stretto = { version = "0.7", optional = true, default-features = false }
tracing = { version = "0.1", optional = true, default-features = false }
vela-utils = { path = "../utils", default-features = false, features = ["ref_counter"] }
vpb = { path = "../vpb", default-features = false, features = ["sea", "xxhash64"] }
zallocator = { path = "../zallocator", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
criterion = "0.4"
vpb = { path = "../vpb", features = ["full"] }
