[package]
name = "bable"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "Badger's high performance sst table implementation"
repository = "https://github.com/al8n/veladb/tree/main/bable"
readme = "README.md"
keywords = ["sstable", "ssttable", "badger", "database", "sst"]
categories = ["database-implementations", "data-structures", "no-std"]

[features]
default = ["std"]
full = ["std", "tracing/default"]
std = ["stretto/sync", "zallocator/std", "zallocator/threadpool", "vpb/std", "vpb/sea-std", "vpb/xxhash64-std", "crossbeam-channel", "crossbeam-utils", "tracing/std", "num_cpus", "scopeguard/use_std", "fmmap", "parking_lot", "rand/std", "vela-utils/std", "vela-utils/ref_counter_std"]
singlethread = ["zallocator/core", "hashbrown", "vela-utils/singlethread", "scopeguard"]

metrics = ["vela-utils/map_cell", "lazy_static/spin_no_std"]
metrics-std = ["vela-utils/map_cell_std", "lazy_static"]
nightly = ["zallocator/nightly", "lru/nightly"]

js = ["getrandom/js"]

# enable aes encryption
aes = ["vpb/aes"]
aes-std = ["vpb/aes-std"]

inline-more = ["hashbrown/inline-more"]

[[bench]]
name = "table"
harness = false

[dependencies]
bitflags = { workspace = true } 
crossbeam-channel = { optional = true, workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { optional = true, workspace = true }
fmmap = { optional = true, workspace = true }
getrandom = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
lazy_static = { optional = true, workspace = true }
lru = { workspace = true }
num_cpus = { optional = true, workspacespace = true }
parking_lot = { optional = true, workspace = true }
rand = { workspace = true }
scopeguard = { optional = true, workspace = true }
stretto = { optional = true, workspace = true }
tracing = { optional = true, workspace = true }
vela-utils = { workspace = true, features = ["ref_counter"] }
vpb = { workspace = true, features = ["sea", "xxhash64"] }
zallocator = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
criterion = "0.4"
vpb = { path = "../vpb", features = ["full"] }
