[package]
name = "kvstructs"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/al8n/veladb/tree/main/kvstructs"
description = "General basic key-value structs for Key-Value based storages."
license = "MIT/Apache-2.0"
keywords = ["kv", "key-value", "data-structures", "key-value-store"]
categories = ["data-structures", "no-std"]

[features]
default = ["std"]
std = ["bytes/std", "wg"]
nightly = []

[dependencies]
bitflags = { workspace = true }
bytes = { workspace = true }
enum_dispatch = { workspace = true }
wg = { optional = true, workspace = true, default-features = true } 

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
