[package]
name = "mapcell"
version = "0.0.0"
edition = "2021"
description = "A placeholder"
license = "Apache-2.0/MIT"

[features]
default = ["std"]
std = ["atomic/std"]
no_std = ["hashbrown"]

[dependencies]
hashbrown = { version = "0.12", optional = true, default-features = false }
atomic = { version = "0.5",  default-features = false }