[package]
name = "skl"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/al8n/veladb/tree/main/skl"
description = "A lock-free thread-safe concurrent ARENA based skiplist implementation."
keywords = ["skiplist", "lock-free", "memtable", "concurrency", "arena"]
categories = ["database", "data-structures", "concurrency", "no-std"]
license = "MIT/Apache-2.0"

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false

[features]
default = ["std"]
alloc = []
std = ["kvstructs/std", "rand/std", "rand/std_rng", "inline_more", "vela-utils/std"]
inline_more = []
js = ["getrandom/js"]

[target.'cfg(loom)'.dependencies]
loom = "0.5.6"

[dependencies]
crossbeam-utils = { workspace = true }
getrandom = { optional = true, workspace = true }
kvstructs = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
vela-utils = { workspace = true, features = ["ref_counter"] }

[dev-dependencies]
criterion = "0.4"
tempfile = "3"
parking_lot = "0.12"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false



[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
