[package]
name = "vela-utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "A placeholder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
singlethread = []
ref_counter = ["triomphe", "alloc"]
ref_counter_std = ["triomphe/std"]
map_cell = ["hashbrown", "atomic"]
map_cell_std = ["atomic/std"]
watermark = ["closer", "scopeguard", "crossbeam-utils"]
closer = ["std", "crossbeam-channel", "wg", "parking_lot", "arc-swap"]
alloc = []

[dependencies]
arc-swap = { optional = true, workspace = true }
triomphe = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
atomic = { optional = true, workspace = true }
crossbeam-channel = { optional = true, workspace = true }
crossbeam-utils = { optional = true, workspace = true }
wg = { optional = true, workspace = true }
parking_lot = { optional = true, workspace = true }
scopeguard = { optional = true, workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]