[package]
name = "vpb"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0/MIT"
description = "key-value proto buffer for veladb"

[features]
default = ["std"]
full = ["std", "sea-std", "xxhash64-std", "aes-std", "snappy", "zstd", "lz4-std"]
std = ["prost/std", "crc32fast/std", "kvstructs/default"]
js = ["getrandom/js"]

# enable aes encryption
aes = ["aes/zeroize", "ctr/zeroize"]
aes-std = ["aes", "ctr/std", "rand/default"]

# enable seahash checksum
sea = ["seahash", "lazy_static/spin_no_std"]
sea-std = ["seahash/use_std", "sea", "lazy_static"]

# enable xxhash64 checksum
xxhash64 = ["xxhash-rust/xxh64", "lazy_static/spin_no_std"]
xxhash64-std = ["rand/default", "xxhash64", "lazy_static"]

# enable snappy compression
snappy = ["snap", "std"]

# enable zstd compression
zstd = ["zstd_compression", "std"]

# enable lz4 compression
lz4 = ["lz4_flex"]
lz4-std = ["lz4", "lz4_flex/default"]


[dependencies]
getrandom = { version = "0.2", optional = true }
kvstructs = { version = "0.0.23", optional = true, default-features = false }
lazy_static = { version = "1.4", optional = true }
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
rand = { version = "0.8", default-features = false }

serde = { version = "1", default-features = false, optional = true, features = ["derive"] }

# encryption related
aes = { version = "0.8", optional = true }
ctr = { version = "0.9", optional = true }

# checksum related
seahash = { version = "4.1", optional = true }
xxhash-rust = { version = "0.8", optional = true, default-features = false }
crc32fast = { version = "1.3", default-features = false }

# compression related
lz4_flex = { version = "0.9", optional = true, default-features = false }
snap = { version = "1", optional = true }
zstd_compression = { package = "zstd", version = "0.11.2+zstd.1.5.2", optional = true }

[build-dependencies]
prost-build = "0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]