[package]
name = "vpb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "key-value proto buffer for veladb"
repository = "https://github.com/al8n/veladb/tree/main/vpb"
documentation = "https://docs.rs/vpb"
categories = ["data-structures", "no-std"]

[features]
default = ["std"]
full = ["std", "sea-std", "xxhash64-std", "aes-std", "snappy", "zstd", "lz4-std"]
std = ["prost/std", "crc32fast/std", "kvstructs/default"]
js = ["getrandom/js"]

# enable aes encryption
aes = ["aes/zeroize", "ctr/zeroize"]
aes-std = ["aes", "ctr/std", "rand/default"]

# enable seahash checksum
sea = ["seahash", "lazy_static/spin_no_std"]
sea-std = ["seahash/use_std", "sea", "lazy_static"]

# enable xxhash64 checksum
xxhash64 = ["xxhash-rust/xxh64", "lazy_static/spin_no_std"]
xxhash64-std = ["rand/default", "xxhash64", "lazy_static"]

# enable snappy compression
snappy = ["snap", "std"]

# enable zstd compression
zstd = ["zstd_compression", "std"]

# enable lz4 compression
lz4 = ["lz4_flex"]
lz4-std = ["lz4", "lz4_flex/default"]

[dependencies]
aes = { optional = true, workspace = true }
crc32fast = { workspace = true }
ctr = { optional = true, workspace = true }
getrandom = { optional = true, workspace = true }
kvstructs = { optional = true, workspace = true }
lazy_static = { optional = true, workspace = true, default-features = true }
lz4_flex = { optional = true, workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
rand = { workspace = true }
seahash = { optional = true, workspace = true }
serde = { optional = true, workspace = true }
snap = { optional = true, workspace = true }
xxhash-rust = { optional = true, workspace = true }
zstd_compression = { optional = true, workspace = true }

[build-dependencies]
prost-build = "0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
