[package]
name = "wisc"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0/MIT"
description = "a placeholder"
repository = "https://github.com/al8n/veladb/tree/main/wisc"

[features]
default = ["std"]
full = ["std", "tracing/default"]
std = ["fmmap", "parking_lot", "vpb/std", "vpb/aes-std", "vela-utils/std", "vela-utils/watermark", "rand/default", "rustix", "skl/std", "crossbeam-channel", "bable/std"]
metrics = []

[dependencies]
bable = { workspace = true }
crabmole = { workspace = true, features = ["sort"] }
crossbeam-channel = {optional = true, workspace = true }
fmmap = { workspace = true, optional = true }
kvstructs = { workspace = true }
lazy_static = { optional = true, workspace = true }
parking_lot = { optional = true, workspace = true }
rand = { workspace = true }
rustix = { optional = true, workspace = true, features = ["fs"] }
skl = { workspace = true, features = ["alloc"] }
tracing = { optional = true, workspace = true }
vela-options = { workspace = true }
vela-utils = { workspace = true, features = ["ref_counter"] }
vela-traits = { workspace = true }
vpb = { workspace = true, features = ["aes"] }
scopeguard = { workspace = true }

[dev-dependencies]
