[package]
name = "zallocator"
version = "0.3.1"
authors = ["Al Liu <scygliu1@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/al8n/veladb/tree/main/zallocator"
documentation = "https://docs.rs/zallocator"
description = "Amortizes the cost of small allocations by allocating memory in bigger chunks."
keywords = ["allocator", "memory"]
categories = ["data-structures", "no-std", "concurrency"]

[[bench]]
name = "allocator"
path = "benches/bench.rs"
harness = false

[features]
default = ["std"]
full = ["std", "async-pool", "threadpool"]
std = ["rand/std", "rand/std_rng", "lazy_static", "parking_lot", "hashbrown", "crossbeam-utils/default", "triomphe/default"]
core = ["lazy_static/spin_no_std", "spin", "rand/alloc", "hashbrown"]
js = ["getrandom/js"]
inline-more = ["hashbrown/inline-more"]
async-pool = ["pollster", "futures/default", "async-channel", "async-io"]
threadpool = ["crossbeam-channel"]
nightly = ["crossbeam-utils/nightly"]

[dependencies]
async-channel = { optional = true, workspace = true }
async-io = { optional = true, workspace = true }
crossbeam-channel = { optional = true, workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
futures = { optional = true, workspace = true }
getrandom = { optional = true, workspace = true }
hashbrown = { optional = true, workspace = true }
lazy_static = { optional = true, workspace = true }
parking_lot = { optional = true, workspace = true }
pollster = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
spin = { optional = true, workspace = true }
triomphe = { workspace = true }

[dev-dependencies]
criterion = "0.4"
futures = "0.3"
rand = "0.8"
tokio = { version = "1.19", features = ["full"] }
tokio-test = "0.4"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.5"

[target.'cfg(wasm)'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
