[package]
name = "zuffer"
version = "0.1.1"
repository = "https://github.com/al8n/veladb/tree/main/zuffer"
description = "A mmap file based buffer implementation."
keywords = ["buffer", "mmap", "file", "memmap", "memmap2"]
category = ["data-structures"]

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
crabmole = { workspace = true, features = ["sort"] }
fmmap = { workspace = true } 
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.4"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
