[package]
name = "integration"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
rand = "0.8"
hashbrown = "0.12"
zallocator = { path = "../", default-features = false, features = ["core"] }
spin = "0.9"
